--- a/installing-pcf-is.html.md.erb
+++ b/installing-pcf-is.html.md.erb
@@ -70,9 +70,9 @@ To configure the **App Containers** pane:
 
 1. (Optional) To give apps that generally stay within their CPU entitlements priority access to extra CPU during CPU bursts, activate the **Allow CPU burst optimization** check box. This check box is activated by default. When this check box is activated, apps that generally stay within their CPU entitlements have higher-priority access to extra CPU than apps that generally exceed their CPU entitlements. When this check box is deactivated, all apps have equal access to extra CPU during CPU bursts. Whether you activate or deactivate this check box, all apps are always guaranteed the amount of CPU that is within their CPU entitlements.
 
-1. Choose how the Gorouter verifies app identity to activate encryption and prevent misrouting under **Gorouter app identity verification**:
-    * **The Gorouter uses TLS to verify app identity**: Activates the Gorouter to verify app identity using TLS. This is the default option.
-    * **The Gorouter and apps use mutual TLS to verify each other's identity**: Activates your apps and the Gorouter to verify each other's identity using mutual TLS (mTLS). This option deactivates TCP routing because app containers accept incoming communication only from the Gorouter.
+1. Choose how the Gorouter and TCP Router verify app identity to activate encryption and prevent misrouting under **Gorouter and TCP Router app identity verification**:
+    * **Gorouter + TCP Router use TLS to verify app identity**: Activates the Gorouter + TCP Router to verify app identity using TLS. This is the default option.
+    * **Gorouter and TCP Router use mutual TLS with apps to verify each other's identity**: Activates your apps and the Gorouter/TCP Router to verify each other's identity using mutual TLS (mTLS). This option requires **Enable TLS for TCP Routes** to be set in the <strong>Networking</strong> pane of the <%= var.app_runtime_abbr %> tile.
 
     For more information, see [Preventing Misrouting](../concepts/http-routing.html#consistency) in _HTTP Routing_.
 
